[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Tsvika S <tsvikas@dell>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
